[package]
name = "intellivault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chatgpt_rs = { version = "1.2.3", features = ["streams"]}
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.11", features = ["socks"] }
tokio = { version = "1.42.0", features = ["full"] }
